--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "npm": "^6.9.2",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
-    "vuetify": "^1.5.16"
+    "vuetify": "^1.5.16",
+    "ws": "^7.0.1"
   },
   "devDependencies": {
     "ajv": "^6.5.0",
