--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "custom-electron-titlebar": "^3.0.10",
     "electron-settings": "^3.2.0",
     "npm": "^6.9.2",
+    "request": "^2.88.0",
+    "rimraf": "^2.6.3",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vuetify": "^1.5.16",
