--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "custom-electron-titlebar": "^3.0.10",
     "electron-settings": "^3.2.0",
+    "iconv-lite": "^0.5.0",
     "npm": "^6.9.2",
     "request": "^2.88.0",
     "rimraf": "^2.6.3",
