--- a/package.json
+++ b/package.json
@@ -42,10 +42,14 @@
         }
       ]
     },
-    "protocols": [{
-      "name": "H5 Native App URL",
-      "schemes": ["h5na"]
-    }],
+    "protocols": [
+      {
+        "name": "H5 Native App URL",
+        "schemes": [
+          "h5na"
+        ]
+      }
+    ],
     "mac": {
       "icon": "build/icons/icon.icns"
     },
@@ -61,6 +65,7 @@
     "electron-settings": "^3.2.0",
     "glob": "^7.1.4",
     "iconv-lite": "^0.5.0",
+    "material-design-icons-iconfont": "^5.0.1",
     "npm": "^6.9.2",
     "request": "^2.88.0",
     "rimraf": "^2.6.3",
