--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
       "icon": "build/icons/icon.ico"
     },
     "linux": {
+      "target": "AppImage",
       "icon": "build/icons"
     }
   },
