--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
       "icon": "build/icons/icon.ico"
     },
     "linux": {
-      "target": "AppImage",
+      "target": "deb",
       "icon": "build/icons"
     }
   },
